@@ -59,6 +59,8 @@ import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.ProtocolException;
 import java.net.SocketTimeoutException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.HashMap;
@@ -130,7 +132,7 @@ public class HTTPAgent {
      * @param setOauthToken  A boolean to flag whether to set the OAuth2 bearer access token in the Authorization header of request.
      * @return HttpURLConnection Http connection to the OpenSRP server.
      */
-    private HttpURLConnection initializeHttp(String requestURLPath, boolean setOauthToken) throws IOException {
+    private HttpURLConnection initializeHttp(String requestURLPath, boolean setOauthToken) throws IOException, URISyntaxException {
 
         HttpURLConnection urlConnection = getHttpURLConnection(requestURLPath);
 
@@ -149,8 +151,9 @@ public class HTTPAgent {
     }
 
     @VisibleForTesting
-    protected HttpURLConnection getHttpURLConnection(String requestURLPath) throws IOException {
-        URL url = new URL(requestURLPath);
+    protected HttpURLConnection getHttpURLConnection(String requestURLPath) throws IOException, URISyntaxException {
+        URI inputURI = new URI(requestURLPath.replaceAll(" ", "%20"));
+        URL url = inputURI.normalize().toURL();
         return (HttpURLConnection) url.openConnection();
     }
 
@@ -170,7 +173,7 @@ public class HTTPAgent {
 
             return processResponse(urlConnection);
 
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Timber.e(ex, "EXCEPTION %s", ex.toString());
             return new Response<>(ResponseStatus.failure, null);
         }
@@ -200,7 +203,7 @@ public class HTTPAgent {
 
             return processResponse(urlConnection);
 
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Timber.e(ex, "EXCEPTION: %s", ex.toString());
             return new Response<>(ResponseStatus.failure, null);
         }
@@ -208,7 +211,7 @@ public class HTTPAgent {
 
     @NonNull
     @VisibleForTesting
-    protected HttpURLConnection generatePostRequest(String postURLPath, String jsonPayload) throws IOException {
+    protected HttpURLConnection generatePostRequest(String postURLPath, String jsonPayload) throws IOException, URISyntaxException {
         HttpURLConnection urlConnection;
         urlConnection = initializeHttp(postURLPath, true);
 
@@ -281,7 +284,7 @@ public class HTTPAgent {
                 Timber.e("Bad response from Dristhi. Status code: %s username: %s using %s ", statusCode, userName, url);
                 loginResponse = UNKNOWN_RESPONSE;
             }
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Timber.e(e, "Failed to check credentials bad url %s", url);
             loginResponse = MALFORMED_URL;
         } catch (SocketTimeoutException e) {
@@ -322,7 +325,7 @@ public class HTTPAgent {
             }
             return processResponse(urlConnection);
 
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Timber.e(ex, "EXCEPTION %s", ex.toString());
             return new Response<>(ResponseStatus.failure, null);
         }
@@ -332,8 +335,9 @@ public class HTTPAgent {
     private Response<String> processResponse(HttpURLConnection urlConnection) {
         String responseString;
         String totalRecords;
+        int statusCode = -1;
         try {
-            int statusCode = urlConnection.getResponseCode();
+            statusCode = urlConnection.getResponseCode();
 
             InputStream inputStream = null;
 
@@ -362,7 +366,8 @@ public class HTTPAgent {
         } finally {
             closeConnection(urlConnection);
         }
-        return new Response<>(ResponseStatus.success, responseString).withTotalRecords(Utils.tryParseLong(totalRecords, 0));
+        return new Response<>(statusCode >= HttpStatus.SC_BAD_REQUEST ? ResponseStatus.failure : ResponseStatus.success, responseString)
+                .withTotalRecords(Utils.tryParseLong(totalRecords, 0));
     }
 
 
@@ -433,7 +438,7 @@ public class HTTPAgent {
             Timber.e(e, "Protocol exception %s", e.toString());
         } catch (SocketTimeoutException e) {
             Timber.e(e, "SocketTimeout %s %s", TIMEOUT, e.toString());
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Timber.e(e, "MalformedUrl %s %s", MALFORMED_URL, e.toString());
         } catch (IOException e) {
             Timber.e(e, "IOException %s %s", NO_INTERNET_CONNECTIVITY, e.toString());
@@ -643,7 +648,7 @@ public class HTTPAgent {
                 return new AccountResponse(statusCode, accountError);
 
             }
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Timber.e(e, "Failed to check credentials bad url %s", tokenEndpointURL);
             accountError = new AccountError(0, MALFORMED_URL.name());
 
@@ -730,7 +735,7 @@ public class HTTPAgent {
                 Timber.e("Bad response from Server. Status code: %s using %s ", statusCode, url);
                 loginResponse = UNKNOWN_RESPONSE;
             }
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Timber.e(e, "Failed to check credentials bad url %s", url);
             loginResponse = MALFORMED_URL;
         } catch (SocketTimeoutException e) {
@@ -826,7 +831,7 @@ public class HTTPAgent {
                 return new Response<DownloadStatus>(ResponseStatus.failure, DownloadStatus.failedDownloaded);
             }
 
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Timber.d(e, "DownloadFormService");
             return new Response<DownloadStatus>(ResponseStatus.success, DownloadStatus.failedDownloaded);
         } finally {
@@ -925,7 +930,7 @@ public class HTTPAgent {
                 return false;
             }
 
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
 
             Timber.e(e);
 
@@ -977,7 +982,7 @@ public class HTTPAgent {
                 Timber.i("User is Authorized");
             }
 
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Timber.e(e);
         } finally {
 
@@ -1013,7 +1018,7 @@ public class HTTPAgent {
                 return gson.fromJson(responseString, AccountConfiguration.class);
             }
 
-        } catch (IOException e) {
+        } catch (Exception e) {
             Timber.e(e);
         } finally {
 
